#164 - add exceptionHandling grammar config + fix test