@@ -19,16 +19,18 @@ import java.util.logging.SimpleFormatter;
  */
 public class ExceptionHandler {
 
-    public static final String ERROR_LOG_FILENAME = "error.log";
+    public static final String DEFAULT_ERROR_LOG_FILENAME = "error.log";
+    public static final String DEFAULT_ERROR_LOG_OUTPUT_FOLDER = ".";
+    public static final boolean DEFAULT_ABORT_ON_EXCEPTION = false;
+    private static final Logger LOGGER = Logger.getLogger(ExceptionHandler.class.getName());
 
     private static ExceptionHandler instance;
 
-    private final Logger errorLogger;
     private boolean abortOnException;
+    public boolean isInititalized;
 
     private ExceptionHandler() {
-        this.errorLogger = Logger.getLogger(ERROR_LOG_FILENAME);
-        this.abortOnException = false;
+        this.isInititalized = false;
     }
 
     public static ExceptionHandler getInstance() {
@@ -39,28 +41,38 @@ public class ExceptionHandler {
         return instance;
     }
 
-    public void setAbortOnException(boolean abortOnException) {
-        this.abortOnException = abortOnException;
+    public void init(boolean abortOnException) {
+        this.init(abortOnException, DEFAULT_ERROR_LOG_OUTPUT_FOLDER, DEFAULT_ERROR_LOG_FILENAME);
     }
 
-    public void setErrorLogOutputFolder(Path outputFolder) {
+    public void init(boolean abortOnException, String outputFolder) {
+        this.init(abortOnException, outputFolder, DEFAULT_ERROR_LOG_FILENAME);
+    }
 
-        final Path errorLogFilePath = Paths.get(outputFolder.toFile().getAbsolutePath(), ERROR_LOG_FILENAME);
+    public void init(boolean abortOnException, String outputFolder, String errorLogFileName) {
+        this.abortOnException = abortOnException;
+
+        final Path outputFolderPath = Path.of(outputFolder);
+
+        final Path errorLogFilePath = Paths.get(outputFolderPath.toFile().getAbsolutePath(), errorLogFileName);
         final SimpleFormatter formatter = new SimpleFormatter();
         final FileHandler errorLogFileHandler;
 
         try {
             errorLogFileHandler = new FileHandler(errorLogFilePath.toString());
+            errorLogFileHandler.setFormatter(formatter);
         } catch (IOException e) {
-            final String errMsg = String.format("Setting the output folder for ExceptionHandler failed: %s", e.getMessage());
-            this.handleException(errMsg, e);
+            final String errMsg = String.format("Setting the output folder for ExceptionHandler failed: %s", e);
+            LOGGER.severe(errMsg);
+
+            System.exit(1);
 
             return;
         }
 
-        this.errorLogger.addHandler(errorLogFileHandler);
+        LOGGER.addHandler(errorLogFileHandler);
 
-        errorLogFileHandler.setFormatter(formatter);
+        this.isInititalized = true;
     }
 
     public void handleException(String message) {
@@ -68,20 +80,25 @@ public class ExceptionHandler {
     }
 
     public void handleException(String message, Throwable cause) {
+
+        if (!isInititalized) {
+            this.init(DEFAULT_ABORT_ON_EXCEPTION, DEFAULT_ERROR_LOG_OUTPUT_FOLDER, DEFAULT_ERROR_LOG_FILENAME);
+        }
+
         if (cause == null) {
-            this.errorLogger.severe(message);
+            LOGGER.severe(message);
         } else {
-            this.errorLogger.log(Level.SEVERE, message, cause);
+            LOGGER.log(Level.SEVERE, message, cause);
         }
 
         if (this.abortOnException) {
             final String errorMsg = String.format(
                 "Program failed with the following message: %s. For more details please check the error log %s.%n",
                 message,
-                ERROR_LOG_FILENAME
+                DEFAULT_ERROR_LOG_FILENAME
             );
 
-            this.errorLogger.severe(errorMsg);
+            LOGGER.severe(errorMsg);
             System.exit(1);
         }
     }
